# stackhpc-monasca-agent-plugins

./: .gitignore  .stestr.conf  .travis.yml  README.rst  requirements.txt  setup.cfg  test-requirements.txt  tox.ini
.github/workflows/: stale.yml
stackhpc_monasca_agent_plugins/: .swn
stackhpc_monasca_agent_plugins/checks/: example_job_size_list  ib_network.py  nvidia.py  nvidia_vgpu.py  nvidiasmi.py  prometheusv2.py  slurm.py
stackhpc_monasca_agent_plugins/detection/: ib_network.py  nvidia.py  nvidia_vgpu.py  slurm.py
stackhpc_monasca_agent_plugins/tests/unit/checks/: example_cluster_utilization_report  example_job_size_list  example_job_statistics  example_job_statistics_empty  example_prometheus_cadvisor_metrics  example_prometheus_ceph_metrics  example_prometheus_haproxy_metrics  example_prometheus_timestamped_metrics  example_sdiag  example_slurm_job_list  example_slurm_node_list  test_ib_network.py  test_nvidia.py  test_prometheus.py  test_slurm.py
stackhpc_monasca_agent_plugins/tests/unit/detection/: test_ib_network.py  test_nvidia.py  test_nvidia_vgpu.py  test_slurm.py
