[metadata]
name = StackHPC Monasca Agent plugins
author = StackHPC
author-email = doug@stackhpc.com
summary =
    A collection of plugins for metrics not provided out of the box
    by the Monasca Agent.
home-page = https://github.com/stackhpc/stackhpc-monasca-agent-plugins
license = Apache-2
version = 0.0.1
classifier =
    Development Status :: 4 - Beta
        Intended Audience :: Developers
        Operating System :: OS Independent
        License :: OSI Approved :: Apache Software License
        Programming Language :: Python

[files]
# The Monasca Agent expects plugins to be present in specific directories. See:
# https://github.com/openstack/monasca-agent/blob/master/docs/Customizations.md
data_files =
    /usr/lib/monasca/agent/custom_checks.d = stackhpc_monasca_agent_plugins/checks/*
    /usr/lib/monasca/agent/custom_detect.d = stackhpc_monasca_agent_plugins/detection/*
